@@ -9,6 +9,7 @@
 =====================================================================
 
 Version 4.3.0
+ - Changed: Relocate "Prev" and "Next" buttons in Install wizard (canajun2eh)
  - Fixed: [ 3179194 ] Upload GEDCOM fails (canajun2eh)
  - Fixed: [ 3173600 ] Manage Media forgets certain options after media change made (canajun2eh)
  - Fixed: [ 3177042 ] Manage Media, Add link errors when entering ID directly (canajun2eh)
